fix: rccNavi 上回正会議情報

--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -85,7 +85,7 @@
         "hour" : 17, // 鳴動開始時刻（時）
         "min"  : 50, // 鳴動開始時刻（分）
         "dur"  : 8,  // 鳴動継続時間（分間）
-        "queryParam" : "?room1=Ｆ&room2=110" // rccNaviに渡すクエリパラメータ
+        "queryParam" : "?event=上回正会議&room1=Ｆ&room2=110" // rccNaviに渡すクエリパラメータ
       },
     ];
   </script>  
