fix: 初期入力文字列

--- a/memorandum/1910cEditableTestForIe.html
+++ b/memorandum/1910cEditableTestForIe.html
@@ -127,7 +127,9 @@ function clearB(){
 </head>
 
 <body>
-  <div contentEditable="true" class="txt_input" id="input">txt_input</div>
+  <div contentEditable="true" class="txt_input" id="input">
+    こんにちは。<br>わたしは<b>コ〇タナ</b>と申します。
+  </div>
   <input type="button" value="選択範囲大文字" onclick="enBold();clearBNest();">
   <input type="button" value="部分大文字解除" onclick="clearB();">
   <input type="button" value="生成パラメータを表示" onclick="test2();">
