fix: 例会日通知をmute通知に変更

--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -179,9 +179,9 @@
     }
     setInterval(rccNaviLancher,10 * 1000);
     if(new Date().getDay() == rccNaviProp[0].day){
-      document.write('<div style="z-index: 9;background: #FA3;color: #FFF;display: block;position: fixed;bottom: 10vw;' + 
+      document.write('<div style="z-index: 9;background: #235;color: #FFF;display: block;position: fixed;bottom: 10vw;' + 
                      'right: 5vw;padding: 1em;border-radius: 1em;font-weight: bold;font-size: 2em;"" ' + 
-                     'onclick="this.parentNode.removeChild(this);">今日は例会の日です！　<input type="button" value="確認" ></div>');
+                     'onclick="this.parentNode.removeChild(this);">ミュート状態です　<input type="button" value="解除" ></div>');
     }
   </script>
 </body>
