--- a/memorandum/schoolWatch.html
+++ b/memorandum/schoolWatch.html
@@ -4,6 +4,8 @@
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>SchoolWatch</title>
+    <script src="./a-r-voiceClock.js"></script>
+  
     <!--▽CSSここから▽-->
     <style>
         h1{
