fix: 最初の発声を１秒後に

--- a/memorandum/a-rccnavi.html
+++ b/memorandum/a-rccnavi.html
@@ -210,11 +210,14 @@
         if(googleJPN) uttr.voice = googleJPN;
         synth.speak(uttr);
       }
-      var uttrStr;
-      if(isNext) uttrStr = "次は、";
-      else       uttrStr = "";
-      uttrStr += eventUttr + "、" + act;
-      speak(uttrStr);
+
+      setTimeout(()=>{
+        var uttrStr;
+        if(isNext) uttrStr = "次は、";
+        else       uttrStr = "";
+        uttrStr += eventUttr + "、" + act;
+        speak(uttrStr);
+      },1000);
       
       function getParam(name) {
         let url = window.location.href;
