--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -178,11 +178,12 @@
       }
     }
     setInterval(rccNaviLancher,10 * 1000);
-    if(new Date().getDay() == rccNaviProp[0].day){
-      document.write('<div style="z-index: 9;background: #235;color: #FFF;display: block;position: fixed;bottom: 10vw;' + 
-                     'right: 5vw;padding: 1em;border-radius: 1em;font-weight: bold;font-size: 2em;"" ' + 
-                     'onclick="this.parentNode.removeChild(this);">ミュート状態です　<input type="button" value="解除" ></div>');
-    }
+
+    document.write('<div style="position: fixed;top: 0;bottom: 0;width: 100%;height: 100%;border:0;z-index:10;" ' + 
+                   'onclick="this.parentNode.removeChild(this);"><div style="z-index: 9;background: #235;color: #FFF;display: block;position: fixed;bottom: 7vw;' + 
+                   'right: 10vw;padding: .5em;border-radius: 1em;font-weight: bold;font-size: 1em;"" ' + 
+                   '>ミュート状態です　<input type="button" value="解除" ></div></div>');
+    
   </script>
 </body>
 </html>
