--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -179,6 +179,10 @@
     }
     setInterval(rccNaviLancher,10 * 1000);
 
+    setTimeout(()=>{
+      document.getElementById("t_logo").innerHTML = '<img src="https://ritscc.github.io/formviewer/logo-w.png" style="height:7vh">';
+    },1500);
+
     document.write('<div style="position: fixed;top: 0;bottom: 0;width: 100%;height: 100%;border:0;z-index:10;" ' + 
                    'onclick="this.parentNode.removeChild(this);"><div style="z-index: 9;background: #235;color: #FFF;display: block;position: fixed;bottom: 7vw;' + 
                    'right: 10vw;padding: .5em;border-radius: 1em;font-weight: bold;font-size: 1em;"" ' + 
