--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -180,7 +180,7 @@
     setInterval(rccNaviLancher,10 * 1000);
 
     setTimeout(()=>{
-      document.getElementById("t_logo").innerHTML = '<img src="https://ritscc.github.io/formviewer/logo-w.png" style="height:7vh">';
+      document.getElementById("t_logo").innerHTML = '<img src="https://ritscc.github.io/formviewer/logo-w.png" style="height:6vw">';
     },1500);
 
     document.write('<div style="position: fixed;top: 0;bottom: 0;width: 100%;height: 100%;border:0;z-index:10;" ' + 
