--- a/memorandum/1911quakeLisnerByP2p.html
+++ b/memorandum/1911quakeLisnerByP2p.html
@@ -8,16 +8,17 @@
   <section>
     <h1>P2P地震速報fetchテスト</h1>
     <input type="button" onclick="a.showQuakeInfo(a.p2pJson[0]);" value="show">
-    <div id="eewInfoDiv">
   </section>
   <script>
       const P2PURL = "https://api.p2pquake.net/v1/human-readable?limit=1";
-      const lineCharNum = 30;
+      const lineCharNum = 20; // 1行の文字数
+      const CHIMEURL = "./a-r-voice/chime13_(c)maoudamashii.wav"; // 著作者様{音楽：魔王魂}
       class p2pQuakeListener{
         constructor(fetchDur = 3,dispDur = 2){
           this.fetchDur = fetchDur;
           this.dispDur  = dispDur;
           this.init();
+          this.initQtElm();
         }
         run(){
           if(this.runInterv){
@@ -44,7 +45,6 @@
         }
 
         fetchP2pJson(){
-          console.log("accessing ...");
           fetch(P2PURL)
           .then((response) => {
             return response.json();
@@ -71,6 +71,31 @@
           }
         }
 
+        initQtElm(){          
+          let qtElm = document.getElementById("quakeInfoTelop");
+          if(!qtElm){
+            qtElm = document.createElement("div");
+            qtElm.id = "quakeInfoTelop";
+            try{
+              document.getElementsByTagName("body")[0].appendChild(qtElm);
+              qtElm = document.getElementById("quakeInfoTelop");
+            }catch(e){
+              console.log("[ERROR] Invalid Html File : " + e);
+              return -1;
+            }
+          
+            qtElm.style.fontSize   = "3vw";
+            qtElm.style.fontWeight = "900";
+            qtElm.style.display    = "none";
+            qtElm.style.position   = "fixed";
+            qtElm.style.top        = "3vh";
+            qtElm.style.left       = "20vw";
+            qtElm.style.color      = "#FFF";
+            qtElm.style.webkitTextStroke = "0.15vw #235";
+            qtElm.style.textStroke       = "0.15vw #235";
+          }
+        }
+
         parseShindo(scale){
             switch(scale){
               case 45:
@@ -88,70 +113,89 @@
 
         showQuakeInfo(p2pJsonNewPart){
           this.stop();
-          let str = "";
-          if(p2pJsonNewPart.code == 551){
-            let time    = p2pJsonNewPart.earthquake.time;
-            let maxScl  = p2pJsonNewPart.earthquake.maxScale;
-            let shindo  = this.parseShindo(maxScl);
-            let epicent = p2pJsonNewPart.earthquake.hypocenter.name;
-            let depth   = p2pJsonNewPart.earthquake.hypocenter.depth;
-            let magunit = p2pJsonNewPart.earthquake.hypocenter.magnitude;
-            let points  = p2pJsonNewPart.points;
+          try{
+            let str = "";
+            if(p2pJsonNewPart.code == 551){
+              let time    = p2pJsonNewPart.earthquake.time;
+              let maxScl  = p2pJsonNewPart.earthquake.maxScale;
+              let shindo  = this.parseShindo(maxScl);
+              let epicent = p2pJsonNewPart.earthquake.hypocenter.name;
+              let depth   = p2pJsonNewPart.earthquake.hypocenter.depth;
+              let magunit = p2pJsonNewPart.earthquake.hypocenter.magnitude;
+              let points  = p2pJsonNewPart.points;
 
-            let sclList = [70,60,55,50,45,40,30,20,10];
+              let sclList = [70,60,55,50,45,40,30,20,10];
 
-            str += `■　地震速報　■<br>　<br>`
-            str += `${time}頃、${epicent}を震源とする地震がありました。<br>`;
-            str += `最大震度${shindo}深さ${depth}　マグニチュード${magunit}<br>`;
-            if(maxScl > 40 || magunit > 5){
-              str += "今後の津波の情報に注意してください。<br>";
-              str += "震度１以上を観測した地域は次のとおりです。<br>";
-            }else{
-              str += "震度１以上を観測した地域は次のとおりです。<br>";
-              str += "　<br>";
-            }            
+              str += `　　　　　　■　地震速報　■<br>　<br>`
+              str += `${time}ごろ、${epicent}で<br>地震がありました。<br>`;
+              str += `震源地は${epicent}<br>`;
+              str += `深さ${depth}　マグニチュード${magunit}<br>`;
+              if(maxScl > 40 || magunit > 5){
+                str += "揺れが大きかったため、海岸付近の地域では<br>今後の津波の情報に注意してください。<br>";
+              }         
 
-            sclList.forEach(scl => {
-              let theSclAddrStr = `震度${this.parseShindo(scl)}　`;
-              points.forEach(p => {
-                if(scl == p.scale){
-                  let theSclAddrList = theSclAddrStr.split("<br>");
-                  if(theSclAddrList[theSclAddrList.length-1].length + p.addr.length > lineCharNum){
-                    theSclAddrStr += `<br>震度${this.parseShindo(scl)}　`
+              sclList.forEach(scl => {
+                let theSclAddrStr = `震度${this.parseShindo(scl)}　`;
+                points.forEach(p => {
+                  if(scl == p.scale){
+                    let theSclAddrList = theSclAddrStr.split("<br>");
+                    if(theSclAddrList[theSclAddrList.length-1].length + p.addr.length > lineCharNum){
+                      theSclAddrStr += `<br>震度${this.parseShindo(scl)}　`
+                    }
+                    theSclAddrStr += `${p.addr}　`;
                   }
-                  theSclAddrStr += `${p.addr}　`;
+                });
+                if(theSclAddrStr != `震度${this.parseShindo(scl)}　`){
+                  str += `${theSclAddrStr}<br>`;
                 }
+
               });
-              if(theSclAddrStr != `震度${this.parseShindo(scl)}　`){
-                str += `${theSclAddrStr}<br>`;
-              }
-
-            });
-          }
-
-          str = str.split("<br>");
-          for(let i = 0;i < (str.length);i += 2){
-            if(str[i+1] && str[i].slice(0,4) == str[i+1].slice(0,4)){
-              str[i+1] = "　　　　" + str[i].slice(4);
             }
-          }
-          for(let i = 0;i < (str.length);i += 2){
+
+            console.log(str.replace(/<br>/g,"\n"));
+            let strList = str.split("<br>");
+            for(let i = 0;i < (strList.length);i += 2){
+              if(strList[i+1] && strList[i].slice(0,4) == strList[i+1].slice(0,4)){
+                strList[i+1] = "　　　　" + str[i].slice(4);
+              }
+            }
+            this.showTelop(strList);
             setTimeout(() => {
-              let s = str[i] + "<br>";
-              if(str[i+1]) s += str[i+1];
-              document.getElementById("eewInfoDiv").innerHTML = s;
+                this.run();
+              },this.dispDur*1000*(str.length+2));
+          }catch(e){
+            console.log(e);
+            this.run;
+          }
+        }
+
+        showTelop(strList){
+          document.getElementById("quakeInfoTelop").style.display = "flex";
+          this.playChime();
+          for(let i = 0;i < (strList.length);i += 2){
+            setTimeout(() => {
+              let s = strList[i] + "<br>";
+              if(strList[i+1]) s += strList[i+1];
+              document.getElementById("quakeInfoTelop").innerHTML = s;
             },this.dispDur*1000*i);
           }
 
           setTimeout(() => {
-              document.getElementById("eewInfoDiv").innerHTML = "■　地震速報　終■";
-            },this.dispDur*1000*str.length);
-          setTimeout(() => {
-              document.getElementById("eewInfoDiv").innerHTML = "";
+              document.getElementById("quakeInfoTelop").innerHTML = "";
+              document.getElementById("quakeInfoTelop").style.display = "none";
               this.run();
-            },this.dispDur*1000*(str.length+2));
+            },this.dispDur*1000*(strList.length));
+        }
+        
+        playChime(){
+          var audio = new Audio();
+          audio.src = CHIMEURL;
+          audio.play();
         }
       }
+
+
+
       const a = new p2pQuakeListener();
       a.run();
     </script>
