--- a/memorandum/always-display-clock.html
+++ b/memorandum/always-display-clock.html
@@ -4,6 +4,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="./fullScSlider/fullScSlider.js"></script>
+    <script src="./p2pQuakeListener.js"></script>
+    <script>
+      var p2pQL;
+      setTimeout(() =>  {        
+          p2pQL = new p2pQuakeListener(6,3);
+          p2pQL.run();
+        },2500);
+    </script>
     <script>
       var pages = [
         {
