--- a/memorandum/1911recept.html
+++ b/memorandum/1911recept.html
@@ -16,7 +16,7 @@
 
       .recept{
         display: block;
-        width: 18em;
+        width: 16rem;
         margin: auto;
       }
 
@@ -58,15 +58,23 @@
         margin: .5em  0;
       }
 
+      .top{
+        width: 7rem !important;
+        display: inline-block;
+        margin: auto;
+        vertical-align: middle;
+      }
+
       
     </style>
   </head>
   <body>
     <div class="recept">
-        <h1 class="cent">領収書</h1>
+        <img src="https://ritscc.github.io/formviewer/logo-w.png" class="top">
+        <h1 class="cent top">領収書</h1>
 
         <div class="dateNo cent"> 
-          2019年99月99日(日) 99:99 No.99999
+          2019年99月99日 99:99 №99999
         </div>
 
         <div class="underline cent">
@@ -85,11 +93,11 @@
         <br>
 
         <div class="cent">
-          立命館大学立命館コンピュータクラブ<br>
+          立命館大学　立命館<br>コンピュータクラブ<br>
           〒525-0058<br>
-          滋賀県草津市野路東１丁目１−１<br>
-          立命館大学　びわこ・くさつキャンパス<br>
-          バイオリンク1F　サークルルーム8<br>
+          滋賀県草津市野路東1丁目1−1<br>
+          立命館大学 びわこ・くさつｷｬﾝﾊﾟｽ<br>
+          ﾊﾞｲｵﾘﾝｸ1F ｻｰｸﾙﾙｰﾑ8<br>
         </div>
 
         <div class="right emph grayFont">
