fix: recept testfile

--- a/memorandum/1911recept.html
+++ b/memorandum/1911recept.html
@@ -16,7 +16,7 @@
 
       .recept{
         display: block;
-        width: 16rem;
+        width: 14rem;
         margin: auto;
       }
 
@@ -59,7 +59,7 @@
       }
 
       .top{
-        width: 7rem !important;
+        width: 6.5rem !important;
         display: inline-block;
         margin: auto;
         vertical-align: middle;
@@ -74,7 +74,7 @@
         <h1 class="cent top">領収書</h1>
 
         <div class="dateNo cent"> 
-          2019年99月99日 99:99 №99999
+          2019年99月99日 №99999
         </div>
 
         <div class="underline cent">
@@ -96,8 +96,8 @@
           立命館大学　立命館<br>コンピュータクラブ<br>
           〒525-0058<br>
           滋賀県草津市野路東1丁目1−1<br>
-          立命館大学 びわこ・くさつｷｬﾝﾊﾟｽ<br>
-          ﾊﾞｲｵﾘﾝｸ1F ｻｰｸﾙﾙｰﾑ8<br>
+          立命館大学 びわこ・くさつ<br>
+          ｷｬﾝﾊﾟｽ ﾊﾞｲｵﾘﾝｸ1F ｻｰｸﾙﾙｰﾑ8<br>
         </div>
 
         <div class="right emph grayFont">
