fix: recept testfile

--- a/memorandum/1911recept.html
+++ b/memorandum/1911recept.html
@@ -16,7 +16,7 @@
 
       .recept{
         display: block;
-        width: 14rem;
+        width: 20rem;
         margin: auto;
       }
 
@@ -59,10 +59,15 @@
       }
 
       .top{
-        width: 6.5rem !important;
+        width: 9.5rem !important;
         display: inline-block;
         margin: auto;
         vertical-align: middle;
+      }
+
+      img{
+        width: 80%;
+        margin-left: 20%;
       }
 
       
@@ -70,11 +75,13 @@
   </head>
   <body>
     <div class="recept">
-        <img src="https://ritscc.github.io/formviewer/logo-w.png" class="top">
+        <div class="top">
+          <img src="https://ritscc.github.io/formviewer/logo-w.png" >
+        </div>
         <h1 class="cent top">領収書</h1>
 
         <div class="dateNo cent"> 
-          2019年99月99日 №99999
+          2019年99月99日　№99999
         </div>
 
         <div class="underline cent">
@@ -96,8 +103,8 @@
           立命館大学　立命館<br>コンピュータクラブ<br>
           〒525-0058<br>
           滋賀県草津市野路東1丁目1−1<br>
-          立命館大学 びわこ・くさつ<br>
-          ｷｬﾝﾊﾟｽ ﾊﾞｲｵﾘﾝｸ1F ｻｰｸﾙﾙｰﾑ8<br>
+          立命館大学 びわこ・くさつｷｬﾝﾊﾟｽ<br>
+          ﾊﾞｲｵﾘﾝｸ1F ｻｰｸﾙﾙｰﾑ8<br>
         </div>
 
         <div class="right emph grayFont">
