fix: 2重ファイル問題解消

--- a/memorandum/1911quakeLisnerByP2p.html
+++ b/memorandum/1911quakeLisnerByP2p.html
@@ -7,7 +7,7 @@
 <body>
   <section>
     <h1>P2P地震速報fetchテスト</h1>
-    <input type="button" onclick="a.showQuakeInfo(a.p2pJson[0]);" value="show">
+    <input type="button" onclick="a.p2pJson=[1,1];" value="show">
   </section>
     <script src="./p2pQuakeListener.js"></script>
     <script>
