--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <script src="../always/fullScSlider/fullScSlider.js"></script>
+  <script src="./always/fullScSlider/fullScSlider.js"></script>
   <script src="./p2pQuakeListener.js"></script>
   <script>
     var p2pQL;
@@ -97,14 +97,14 @@
       },
     ];
   </script>  
-  <script src="../always/always-main.js"></script>
+  <script src="./always/always-main.js"></script>
   <title>always</title>
-  <link href="../always/always-style.css" rel="stylesheet" type="text/css">
-  <link href="../always/td-ticker-clock.css" rel="stylesheet" type="text/css">
-  <link href="../always/always-setting.css" rel="stylesheet" type="text/css">
+  <link href="./always/always-style.css" rel="stylesheet" type="text/css">
+  <link href="./always/td-ticker-clock.css" rel="stylesheet" type="text/css">
+  <link href="./always/always-setting.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <script src="../always/td-ticker.js"></script>
+  <script src="./always/td-ticker.js"></script>
   
   <section class="modal" id="settingSec" onclick="hideSettingSec();">
     <div class="modal" id="settingSecInner" onclick="event.stopPropagation();">
@@ -158,7 +158,7 @@
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
-  <script src="../always/always-setting.js"></script>
+  <script src="./always/always-setting.js"></script>
   
   <iframe id="rccNavi" class="fullSc" name="rccNavi" style="display:none;" onclick="hideRccNavi();"></iframe>
   
