--- a/memorandum/1911recept.html
+++ b/memorandum/1911recept.html
@@ -108,7 +108,12 @@
         for(let i = 0; i < len; i++)padded += "0";
         return (padded + num).slice(-len);
       }
-      
+
+      function parseCurrencyStr(num){
+        var currencyStr =  num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+        return currencyStr;
+      }
+
       function ElmId(id){
         return document.getElementById(id);
       }
@@ -120,8 +125,8 @@
           ElmId("date").innerHTML    = date;
           ElmId("No"     ).innerHTML = getParam("No")      ? getParam("No")      : "　　　　　";
           ElmId("cname"  ).innerHTML = getParam("cname")   ? getParam("cname")   : "　　　　　　　";
-          ElmId("price"  ).innerHTML = getParam("price")   ? getParam("price")   : 0;
-          ElmId("outTax" ).innerHTML = getParam("price")   ? getParam("price")   : 0;
+          ElmId("price"  ).innerHTML = getParam("price")   ? parseCurrencyStr(getParam("price"))  : 0;
+          ElmId("outTax" ).innerHTML = getParam("price")   ? parseCurrencyStr(getParam("price"))  : 0;
           ElmId("proviso").innerHTML = getParam("proviso") ? getParam("proviso") : "お品代として";
           //window.print();
         }catch(e){
