fix: note（備考）をスリムに

--- a/memorandum/1911recept.html
+++ b/memorandum/1911recept.html
@@ -89,6 +89,9 @@
         margin-left: 20%;
       }
 
+      #note{
+        transform: scaleX(0.9);
+      }
       
     </style>
 
@@ -171,7 +174,7 @@
         消費税等　非課税<br>
       </div>
       <hr>
-      <div  class="left">
+      <div  class="left" id="note">
         営業に関しないため収入印紙不要
       </div>
       
