fix: 試験期間版はcloscheを利用するように

--- a/memorandum/schoolWatch.html
+++ b/memorandum/schoolWatch.html
@@ -371,8 +371,9 @@ setInterval('ClockF()',1000);
     let date  = now.getDate();
     if((month == 7 || month == 1) && date > 15){
       document.write('<div style="z-index: 9;background: #235;color: #FFF;display: block;position: fixed;bottom: 21vh;' + 
-                    'right: 10vw;padding: .5em;border-radius: 1em;font-weight: bold;font-size: 1em;"" ' + 
-                    '><a style="color:#EEF;" href="./schoolWatchExam.html">テスト時刻へ変更するにはこちらをクリック</a>　' + 
+                    'right: 10vw;padding: .5em;border-radius: 1em;font-weight: bold;font-size: 1em;">' + 
+                    '<a style="color:#EEF;" href="https://closche.web.app/?preset=rexamtt">' +
+                    'テスト時刻へ変更するにはこちらをクリック</a>　' + 
                     '<input type="button" value="閉じる" style="font-size:1em;width:4em;"'+
                     'onclick="this.parentNode.parentNode.removeChild(this.parentNode);"></div>');
     }
