--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
  
 </section>
 <footer>
-    COPYRIGHT &#169; あいてにあむ 2019 ALL RIGHTS RESERVED.	
+    COPYRIGHT &#169; あいてにあむ 
+    <span id="nowYear"></span>
+    <script>
+      document.getElementById("nowYear").innerHTML = new Date().getFullYear();
+    </script> 
+    ALL RIGHTS RESERVED.	
 </footer>
 </body>
