update: tanikawa station

--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -54,7 +54,8 @@
       kobe: { name: "神戸", x: 250, y: 220 },
       hyogo: { name: "兵庫", x: 200, y: 220 },
       wadamisaki: { name: "和田岬", x: 200, y: 300 },
-      kakogawa: { name: "加古川", x: 100, y: 220 },
+      kakogawa: { name: "加古川", x: 120, y: 220 },
+      tanikawa: { name: "谷川", x: 220, y: 120 },
       aioi: { name: "相生", x: 40, y: 220 },
       banshuako: { name: "播州赤穂", x: 40, y: 300 },
       hanaten: { name: "放出", x: 620, y: 300 },
@@ -83,6 +84,9 @@
 
       { id: "tozai1", color: "#e73082", st: ["amagasaki", "kitashinchi"] },
       { id: "tozai2", color: "#e73082", st: ["kitashinchi", "kyobashi"] },
+
+      { id: "fukuchiyama", color: "#fcc800", st: ["tanikawa","amagasaki"] },
+      { id: "kakogawa", color: "#00a684", st: ["kakogawa", "tanikawa"] },
 
       { id: "osakahigashi1", color: "#3b7293", st: ["shinosaka", "shigino"] },
       { id: "osakahigashi2", color: "#3b7293", st: ["kyuhoji", "hanaten"] },
