--- a/memorandum/1910trainNaviSimulator/trainNaviSimulator.html
+++ b/memorandum/1910trainNaviSimulator/trainNaviSimulator.html
@@ -202,7 +202,7 @@
         sc2Elm.style.display = "block";
         for(let i=0;i<3;i++){
           setTimeout(()=>{
-            speak("ｼｮﾃｲﾃｲﾓｸ。、" + sTarget);
+            speak("ｺﾃｲﾃｲﾓｸ。、" + sTarget);
           },i*2500)
         }
         setTimeout(()=>{hideElm(sc2Elm);}, screen2Dur * 1000);
