--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -5,23 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>大阪近郊区間経路アシスタント</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
-
-    #main {
-      border: solid 1px #000000;
-      position: static;
-      width: 960px;
-      height: 720px;
-      display: block;
-      margin: auto;
-      font-family: 'Kosugi Maru', sans-serif;
-    }
-
-    #kansai {
-      position: relative;
-    }
-  </style>
+  <link rel="stylesheet" href="route.css">
 </head>
 
 <body>
@@ -29,7 +13,7 @@
   </header>
 
   <section id="main">
-    <div id="kansai">
+    <div id="kansai" class="route">
     </div>
   </section>
   <script type="text/javascript" src="osaka.js">
